--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 "PKGNAME": {
-            "name": "PKGNAME2",
+            "name": "PKG2NAME",
             "description": "ABOUT",
             "url": "ICLOUDLINK"
         }
